# Movie_Recommendation

./: .gitignore  Function_calling.py  app.py  app_utils.py  build_index.py  chroma_manifest.json  conversation_history.json  db_utils.py  embeddings.py  file.py  gui.py  history_manager.py  output_movies.txt  package.json  pyproject.toml
chroma_db/: chroma.sqlite3
chroma_db/1a7112e7-f286-4097-b559-cf3ce3783d04/: index_metadata.pickle
chroma_db/d30d924e-e9a1-4886-be0b-def169e716a6/: index_metadata.pickle
